--- a/application/layouts/default.phtml
+++ b/application/layouts/default.phtml
@@ -1,78 +1,54 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>AviseME</title>
+        <title>Slave</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-        
+
         <!-- Favicon -->
-        <link rel="AviseME" href="/img/aviao.png" /> 
-        
+
         <!-- CSS -->
-        <link href="/resources/bootstrap-3.1.1-dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href="/css/default.css" rel="stylesheet" media="screen">
-        <link href="/resources/jquery/jquery-ui-1.10.4.custom/css/smoothness/jquery-ui-1.10.4.custom.css" rel="stylesheet" media="screen">
-        <link href="/resources/jquery/jquery-autocomplete/styles.css" rel="stylesheet" media="screen">
 
         <!-- JS -->
-        <script src="/resources/jquery/jquery-1.11.0.min.js"></script>
-        <script src="/resources/jquery/jquery.maskedinput.js"></script>
-        <script src="/resources/jquery/jquery.price_format.2.0.js"></script>
-        <script src="/resources/bootstrap-3.1.1-dist/js/bootstrap.min.js"></script>
-        <script src="/resources/jquery/jquery-ui-1.10.4.custom/js/jquery-ui-1.10.4.custom.min.js"></script>
-        <script src="/resources/jquery/jquery-ui-1.10.4.custom/js/jquery.ui.datepicker-pt-BR.js"></script>
-        <script src="/resources/jquery/jquery-autocomplete/jquery.autocomplete.js"></script>
-        <script src="/resources/jquery/jquery-noty/packaged/jquery.noty.packaged.js"></script>
-        <script src="/js/general.js"></script>
-
+        <script src="/js/jquery-1.11.0.min.js"></script>
     </head>
     <body>
         <!-- Container das notificações -->
         <div class='notifications top-right'></div>
-        
+
         <?php
-            //Recupera e exibe as mensagens salvas na sessão
-            Util_Notificacao::exibir();
+        //Recupera e exibe as mensagens salvas na sessão
+        Util_Notificacao::exibir();
         ?>
-        
+
         <!-- Header -->
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <header id="sp-header-wrapper" class="">
             <div class="container">
-                <div class="navbar-header">
-                    <img src="/img/aviao.png" />
-                    <a class="navbar-brand" href="/">AviseME</a>
+                <div class="row-fluid" id="header">
+                    <div id="sp-logo" class="span3">
+                        <div class="logo-wrapper">
+                            <div class="logo" style="width:153px; height:50px;"></div>
+                        </div>
+                    </div>
                 </div>
-                <div class="navbar-collapse collapse form-login">
-                    <form class="navbar-form navbar-right" role="form">
-                        <div class="form-group">
-                            <input type="text" name="tel" placeholder="Telefone com DDD" class="form-control inputTel">
-                        </div>
-                        <div class="form-group form-senha-top">
-                            <input type="password" placeholder="Senha" class="form-control">
-                            <a href="#">Esqueceu a senha?</a>
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-success">Entrar</button>
-                        </div>
-                    </form>
-                </div><!--/.navbar-collapse -->
             </div>
-        </div>
+        </header>
         <div class="clear"></div>
-        
-        <!-- Body -->
-        <div id="dvBackground">
-            <div class="dvBody">
-                <?php echo $this->layout()->content ?>
-            </div>
+
+        <!-- Menu -->
+        <div class="menu">
+            <div class="menu-item">Publicação</div>
             <div class="clear"></div>
         </div>
         
-        <!-- Footer -->
-        <div id="footer">
-            <div id="footer-content">
-                Desenvolvido por <b>GN Web</b>
-            </div>
+        <!-- Body -->
+        <div class="dvBody">
+            <?php echo $this->layout()->content ?>
         </div>
+        <div class="clear"></div>
+
+        <!-- Footer -->
+
     </body>
 </html>
